<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mocap_qualisys</name>
  <version>0.0.0</version>
  <description>Driver for Qualisys</description>

  <maintainer email="ghaggin@umich.edu">Glen Haggin</maintainer>
  <license>Apache-2.0</license>
  <author>Glen Haggin</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>tf2_eigen</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
